kubernetes/apps/ci/konflate/app/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: konflate
  namespace: ci
spec:
  hostnames:
    - konflate.juno.moe
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: konflate
          namespace: ci
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
